[gd_scene load_steps=3 format=3 uid="uid://cvhfdh7qwr2f2"]

[ext_resource type="Script" path="res://addons/stat_printer/scene/script/file_type_entry.gd" id="1_j3gev"]
[ext_resource type="Texture2D" uid="uid://dsbautnevo0pg" path="res://addons/stat_printer/texture/Remove.svg" id="2_c0f73"]

[node name="TextScanEntry" type="HBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_j3gev")

[node name="PanelContainer2" type="PanelContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer" type="HSplitContainer" parent="PanelContainer2"]
layout_mode = 2
split_offset = -340

[node name="TypeName" type="LineEdit" parent="PanelContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Display Name"

[node name="LineEdit" type="LineEdit" parent="PanelContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "File Extension (don't include the dot, ie do \"filetype\" rather than \".filetype\")"

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 2

[node name="DeleteButton" type="TextureButton" parent="PanelContainer"]
layout_mode = 2
texture_normal = ExtResource("2_c0f73")
texture_pressed = ExtResource("2_c0f73")
texture_hover = ExtResource("2_c0f73")
texture_disabled = ExtResource("2_c0f73")
texture_focused = ExtResource("2_c0f73")
stretch_mode = 5

[connection signal="pressed" from="PanelContainer/DeleteButton" to="." method="on_delete_button_pressed"]
